css fix for really long words aka urls that are not wrapping in the issue boxes

--- a/app/assets/stylesheets/issues.css.scss
+++ b/app/assets/stylesheets/issues.css.scss
@@ -140,7 +140,8 @@ body {
     padding: 0px;
     background-image: none;
     background: #fff;
-
+    word-wrap: break-word;
+    
     i {
       font-size: 22px;
     }
